--- a/src/Kooco.Pikachu.Blazor/_Imports.razor
+++ b/src/Kooco.Pikachu.Blazor/_Imports.razor
@@ -13,3 +13,4 @@
 @using Volo.Abp.BlazoriseUI.Components
 @using Kooco.Pikachu.Blazor.Layouts
 @using Kooco.Pikachu.Blazor.Pages.Components
+@using Blazorise.Splitter
