Commit For Pk-1084

--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -232,7 +232,7 @@
         </div> *@
         <div class="row">
             <div class="col-2">
-                <label>@L["ItemStyle"]</label>
+                <label>@L["ItemStyle"]<span class="text-danger">*</span></label>
             </div>
             <div class="col-10">
 
@@ -630,7 +630,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2 text-end">
-                        <label class="pt-2">@L["ItemTemperature"]<span class="text-danger">*</span></label>
+                        <label class="pt-2">@L["ItemTemperature"]</label>
                     </div>
                     <div class="col-4">
                         <Select TValue="ItemStorageTemperature?" Class="form-select"
