--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -240,7 +240,7 @@
             </div> *@
             <div class="row my-3">
                 <div class="col-2">
-                    <label>@L["ItemStyle"]</label>
+                    <label>@L["ItemStyle"]<span class="text-danger">*</span></label>
                 </div>
                 <div class="col-10">
 
@@ -643,7 +643,7 @@
                     </div>
                     <div class="row">
                         <div class="col-2 text-end">
-                            <label class="pt-2">@L["ItemTemperature"]<span class="text-danger">*</span></label>
+                            <label class="pt-2">@L["ItemTemperature"]</label>
                         </div>
                         <div class="col-4">
                             <Select TValue="ItemStorageTemperature?" Class="form-select"
