Commit for Pk-974

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
@@ -60,7 +60,7 @@
                 </Column>
                 <Column ColumnSize="ColumnSize.Is2">
                     <Button Class="btn-outline-primary w-100" Clicked="(() => AdvanceFiltersVisible = !AdvanceFiltersVisible)">
-                        @L["Filters"]
+                        @L["Filter"]
                         <i class="fas @(AdvanceFiltersVisible ? "fa-angles-up" : "fa-angles-down") ms-1"></i>
                     </Button>
                 </Column>
