--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -1737,7 +1737,7 @@
                                 {
                                     <TableRow>
                                         <TableRowCell>@history.CreationTime.ToString("dd/MM/yyyy hh:mm:ss tt")</TableRowCell>
-                                        <TableRowCell>@history.EditorUserName</TableRowCell>
+                                        <TableRowCell>@L[history.EditorUserName]</TableRowCell>
                                         <TableRowCell>@L[history.ActionType + "Title"]</TableRowCell>
                                         <TableRowCell>@FormatLocalizedDetails(history)</TableRowCell>
                                     </TableRow>
