--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Items/New"
 
+@using Kooco.Pikachu.Blazor.Pages.Components.Icons
 @using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.Items.Dtos;
 @using Kooco.Pikachu.ProductCategories
@@ -24,16 +25,13 @@
         margin-top: 10px;
     }
 
-    .drag-drop-span i {
-        cursor: pointer;
-    }
     .draggable-row {
-    cursor: grab;
-}
+        cursor: grab;
+    }
 
-.draggable-row:active {
-    cursor: grabbing;
-}
+        .draggable-row:active {
+            cursor: grabbing;
+        }
 </style>
 
 <LoadingIndicator @ref="Loading" FullScreen></LoadingIndicator>
@@ -68,7 +66,7 @@
                 <div class="col-10">
                     <Field>
                         <FilePicker @ref="FilePickerCustom"
-                               FilePickerLocalizer="(key,args)=>LocalizeFilePicker(key,args)"
+                                    FilePickerLocalizer="(key,args)=>LocalizeFilePicker(key,args)"
                                     Multiple
                                     Changed="OnFileUploadAsync"
                                     ShowMode="FilePickerShowMode.List"
@@ -119,21 +117,22 @@
                         <div class="image-list-container" ondragover="event.preventDefault();">
                             @foreach (var image in CreateItemDto.ItemImages.OrderBy(x => x.SortNo))
                             {
-
-                                <div class="d-flex flex-column align-items-center justify-content-center mb-2">
-                                    <div class="image-container">
-                                        <Image class="blur-image" Source="@image.ImageUrl" Text="Item Image" Fluid />
-                                        <button class="delete-button" @onclick="() => DeleteImageAsync(image.BlobImageName)">
-                                            <i class="fa fa-trash"></i>
-                                        </button>
-                                    </div>
-                                    <div class="w-100 text-center"
-                                         draggable="true"
-                                         @ondrop="@(()=> Drop(image))"
-                                         @ondrag="@(()=> StartDrag(image))">
-                                        <span class="drag-drop-span pb-2">
-                                            <i class="fa-solid fa-bars fa-xl"></i>
-                                        </span>
+                                <div draggable="true"
+                                     @ondrop="@(()=> Drop(image))"
+                                     @ondrag="@(()=> StartDrag(image))"
+                                     class="draggable">
+                                    <div class="d-flex flex-column align-items-center justify-content-center">
+                                        <div class="image-container">
+                                            <Image class="blur-image" Source="@image.ImageUrl" Text="Item Image" Fluid />
+                                            <button class="delete-button" @onclick="() => DeleteImageAsync(image.BlobImageName)">
+                                                <i class="fa fa-trash"></i>
+                                            </button>
+                                        </div>
+                                        <div class="text-center">
+                                            <span class="drag-drop-span">
+                                                <GripDotSvg></GripDotSvg>
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
                             }
@@ -143,23 +142,23 @@
                 </div>
             }
             <div class="row">
- <div class="col-2">
+                <div class="col-2">
                     <fieldLabel>@L["ItemBadge"]</fieldLabel>
                 </div>
                 <div class="col-10">
-                 
-                          <Addons>
+
+                    <Addons>
                         <Addon AddonType="AddonType.Body">
-                          <TextEdit @bind-Text="@CreateItemDto.ItemBadge" MaxLength="@MaxBadgeTextCount" />
-                          </Addon>
+                            <TextEdit @bind-Text="@CreateItemDto.ItemBadge" MaxLength="@MaxBadgeTextCount" />
+                        </Addon>
                         <Addon AddonType="AddonType.End">
                             <AddonLabel Style="background-color: #f5f5f7">
                                 @(string.IsNullOrWhiteSpace(CreateItemDto.ItemBadge) ? 0 : (CreateItemDto.ItemBadge.Count()))/@MaxBadgeTextCount
                             </AddonLabel>
                         </Addon>
                     </Addons>
-              
-                    </div>
+
+                </div>
             </div>
             <div class="row">
                 <div class="col-2">
@@ -263,7 +262,7 @@
                                 <input type="text" class="tag-input" placeholder="New Tag"
                                        @bind-value="item.InputTagValue"
                                        @onkeyup="@(async (e) => await HandleAttributeTagInputConfirm(item.Id, item.InputTagValue, e))"
-                                        @onblur="@(async () => await HandleAttributeTagInputConfirm(item.Id, item.InputTagValue, null))"/>
+                                       @onblur="@(async () => await HandleAttributeTagInputConfirm(item.Id, item.InputTagValue, null))" />
                                 <i class="tag-input-placeholder-icon fa fa-plus"></i>
                             </div>
                         </div>
@@ -337,7 +336,7 @@
                                             @L["CopyToAll"]
                                         </Span>
                                     </TableHeaderCell>
-                                    
+
                                     <TableHeaderCell Class="text-center">
                                         @L["PreorderQuantity"]
                                         <Span Class="d-block pt-1 text-primary cursor-pointer"
@@ -363,22 +362,20 @@
                                         @L["Status"]
                                     </TableHeaderCell>
                                     <TableHeaderCell Class="text-center">
-                                      
+
                                     </TableHeaderCell>
                                 </TableRow>
                             </TableHeader>
                             <TableBody>
                                 @foreach (CreateItemDetailsDto item in ItemDetailsList)
                                 {
-                                    <TableRow 
-                                     Class="text-center align-items-center draggable-row"
-                                        Draggable=true
-                                      
-                                        DragStart="(e) => OnDragStart(e, item)"
-                                      DragOver="(e) => OnDragOver(e)"
-                                        Drop="(e) => OnDrop(e, item)">
-                                  
-                                    
+                                    <TableRow Class="text-center align-items-center draggable-row"
+                                              Draggable=true
+                                              DragStart="(e) => OnDragStart(e, item)"
+                                              DragOver="(e) => OnDragOver(e)"
+                                              Drop="(e) => OnDrop(e, item)">
+
+
                                         <TableRowCell>
                                             <i class="fas fa-caret-@(item.IsExpanded ? "up" : "down")" @onclick="() => ToggleExpanded(item)" />
                                         </TableRowCell>
@@ -392,13 +389,13 @@
                                         <TableRowCell>
                                             <NumericEdit Class="form-control form-control-sm" style="min-width: 100px;" @bind-Value="@item.GroupBuyPrice"></NumericEdit>
                                         </TableRowCell>
-                                          <TableRowCell>
+                                        <TableRowCell>
                                             <NumericEdit Class="form-control form-control-sm" style="min-width: 100px;" @bind-Value="@item.Cost"></NumericEdit>
                                         </TableRowCell>
                                         <TableRowCell>
                                             <input class="form-control form-control-sm" style="min-width: 100px;" @bind-value="@item.InventoryAccount" />
                                         </TableRowCell>
-                                         <TableRowCell>
+                                        <TableRowCell>
                                             <NumericEdit Class="form-control form-control-sm"
                                                          @bind-Value="@item.StockOnHand"
                                                          @onchange="(e) => OnStockOnHandChanged(e, item)" />
@@ -412,7 +409,7 @@
                                                 <div class="text-danger">@ValidationErrors[item]</div>
                                             }
                                         </TableRowCell>
-                                               
+
                                         <TableRowCell>
                                             <NumericEdit Class="form-control form-control-sm" @bind-Value="@item.PreOrderableQuantity"></NumericEdit>
                                         </TableRowCell>
@@ -426,7 +423,7 @@
                                             <Switch @bind-Checked="@item.Status" />
                                         </TableRowCell>
                                         <TableRowCell>
-                                              <i class="fa-solid fa-bars fa-2xl"></i>
+                                            <i class="fa-solid fa-bars fa-2xl"></i>
                                         </TableRowCell>
                                     </TableRow>
 
@@ -444,7 +441,7 @@
                                                     <Div Class="col-12">
                                                         <Field>
                                                             <FilePicker @ref="ItemDetailPickers[ItemDetailsList.IndexOf(item)]"
-                                                                        FilePickerLocalizer="(key,args)=>LocalizeFilePicker(key,args)"                                      
+                                                                        FilePickerLocalizer="(key,args)=>LocalizeFilePicker(key,args)"
                                                                         Changed="@(async (e) => await OnImageUploadAsync(e,
                                                                                                                          item,
                                                                                                                          ItemDetailPickers[ItemDetailsList.IndexOf(item)]))"
