--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -113,47 +113,55 @@
     flex-wrap: wrap;
     border-radius: 0.5rem;
     border: 1px dashed rgb(150, 113, 36);
+    gap: 10px;
 }
 
 .image-container {
     position: relative;
     height: 100px;
     width: auto;
-    margin-right: 10px;
     border-radius: 0.5rem;
-    margin-bottom: 10px;
 }
 
-    .image-container img.blur-image {
-        height: 100%;
-        width: 7em;
-        object-fit: contain;
-        border-radius: 0.5rem;
-        border: 1px solid rgb(150, 113, 36);
-        padding: 0.5em;
+.draggable {
+    cursor: grab;
+}
+
+    .draggable:active {
+        cursor: grabbing;
     }
 
-    .image-container:hover img.blur-image {
-        filter: blur(2px);
-    }
+.image-container img.blur-image {
+    height: 100%;
+    width: 7em;
+    object-fit: contain;
+    border-radius: 0.5rem;
+    border: 1px solid rgb(150, 113, 36);
+    padding: 0.5em;
+}
 
-    .image-container .delete-button {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: transparent;
-        border: none;
-        color: red;
-        font-size: 20px;
-        cursor: pointer;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-    }
+.image-container:hover img.blur-image {
+    filter: blur(2px);
+}
 
-    .image-container:hover .delete-button {
-        opacity: 1;
-    }
+.image-container .delete-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 10px;
+    border: none;
+    color: red;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.image-container:hover .delete-button {
+    opacity: 1;
+}
 
 .b-file-picker .b-text-drop {
     padding: 60px !important;
