--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
@@ -121,7 +121,7 @@
             </div>
             <div class="row mt-2">
                 <div class="col-2">
-                    <label>@L["ItemDescription"]</label>
+                    <label>@L["ItemDescription"]<span class="text-danger">*</span></label>
                 </div>
                 <div class="col-10">
                     <Blazored.TextEditor.BlazoredTextEditor @ref="@ItemDescription">
