Commit for Pk-1062

--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/CreateFreebie.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/CreateFreebie.razor
@@ -53,6 +53,7 @@
                 <div class="col-10">
                     <Field>
                         <FilePicker @ref="FilePicker"
+                            FilePickerLocalizer="(key,args)=>LocalizeFilePicker(key,args)"
                                     Multiple
                                     Changed="OnImageUploadAsync"
                                     ShowMode="FilePickerShowMode.List"
