--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/SetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/SetItem.razor
@@ -6,6 +6,30 @@
 @inject IStringLocalizer<PikachuResource> L;
 @inject NavigationManager NavigationManager;
 
+ @if(loading)
+    {
+     <div class="row">
+        <div class="col-4">
+             <SkeletonItem ColumnSize="ColumnSize.Is4" Class="mb-2" />
+        </div>
+        <div class="col-8 text-end">
+           <SkeletonItem ColumnSize="ColumnSize.Is1" Class="mb-2" />
+            <SkeletonItem ColumnSize="ColumnSize.Is1" Class="mb-2" />
+             <SkeletonItem ColumnSize="ColumnSize.Is1" Class="mb-2" />
+              <SkeletonItem ColumnSize="ColumnSize.Is1" Class="mb-2" />
+        </div>
+    </div> 
+  
+    <Card>
+        <CardBody>
+            <Skeleton Animation="SkeletonAnimation.Pulse">
+        <!-- For example, 5 horizontal bars to represent the table rows -->
+      <SkeletonTable Rows="10" Columns="7" />
+    </Skeleton>
+        </CardBody>
+    </Card>
+    }
+    <div style="@($"display: {(loading ? "none" : "block")};" )">
 <div class="row">
     <div class="col-6">
         <h3>@L["SetItem"]</h3>
@@ -24,6 +48,7 @@
         </button>
     </div>
 </div>
+
 
 <Card>
     <CardBody>
@@ -100,6 +125,7 @@
         </DataGrid>
     </CardBody>
 </Card>
+</div>
 
 @code {
 
